Add JVM flags for Java module access and clean up integration tests
- Add --add-exports flag for sun.security.action to fix Spark serialization
- Extract ExistingRow helper for potential future use with UnsafeRow testing
- Remove experimental corrupted row test that caused serialization issues
- Clean up debug code from empty binary test

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>